# fpi

Trabalho_1/: CMakeLists.txt  README.md
Trabalho_1/src/: main.cpp
Trabalho_1/src/filesOperations/: filesOperations.cpp  filesOperations.h
Trabalho_1/src/imageProcessing/: imageProcessing.cpp  imageProcessing.h
Trabalho_2/: CMakeLists.txt  README.md
Trabalho_2/src/: main.cpp
Trabalho_2/src/basic/: basic.cpp  basic.h
Trabalho_2/src/convolution/: convolution.cpp  convolution.h
Trabalho_2/src/files/: files.h
Trabalho_2/src/filters/: filters.cpp  filters.h
Trabalho_2/src/utils/: constants.cpp  imageUtils.cpp
Trabalho_3/: CMakeLists.txt  README.md
Trabalho_3/src/: main.cpp
Trabalho_3/src/base/: base.cpp  base.h
Trabalho_3/src/convolution/: convolution.cpp  convolution.h
Trabalho_3/src/files/: files.cpp  files.h
Trabalho_3/src/filters/: filters.cpp  filters.h
Trabalho_3/src/histogram/: histogram.cpp  histogram.h
Trabalho_3/src/transform/: transform.cpp  transform.h
Trabalho_3/src/utils/: constants.cpp  imageUtils.cpp
Trabalho_3/src/video/: video.cpp  video.h
